# Blockchain-Development-Portfolio

./: .gitignore  Proof_of_work.py  blockchain.py  current_price.py  hashing_image.py  pyproject.toml
.states/vm-prague/: state.json
Blockchain-using-Python/THARUNITE/: README.md  accounts  blockchain.py  blockchain.txt  pyproject.toml  unit_test.py
Blockchain-using-Python/THARUNITE_2.0/: transactions.py
Blockchain-using-Python/cryptography basics/public_key/: encryption.py
Bones-of-Bitcoin/Finite-Fields/: finite_fields.py
Bones-of-Bitcoin/Finite_Fields/: unit_test.py
Bones-of-Bitcoin/contracts/: Arithmetic.sol  Hello.sol  booleanToggle.sol  overflow.sol  reverseInteger.sol  simpleStorage.sol  whoseNumber.sol
Bones-of-Bitcoin/contracts/ERC/: ERC173.sol  ERC20.sol
Bones-of-Bitcoin/contracts/conditional/: easy.sol  hard.sol  medium.sol
Bones-of-Bitcoin/contracts/dataStructures/: easy.sol  (+1 more)
Bones-of-Bitcoin/elliptic_curve/: point.py
Bones-of-Bitcoin/hardhatTesting/: package-lock.json  package.json
Bones-of-Bitcoin/solidity/: HelloWorld.sol
Chatroom/: client.py  connection_pool.py  server.py
DEFI/: amm.py
THARUNITE/: pyproject.toml
artifacts/: ElectricityBill.json  ElectricityBill_metadata.json  Escrow.json  Escrow_metadata.json  Grade.json  Grade_metadata.json  Hello.json  Hello_metadata.json  IERC173.json  IERC173_metadata.json  IERC20_metadata.json  Insurance.json  Insurance_metadata.json  OverandUnderflowDemo.json  OverandUnderflowDemo_metadata.json  Overflow.json  OverflowDemo.json  OverflowDemo_metadata.json  Overflow_metadata.json  SavingsTracker.json  SavingsTracker_metadata.json  Token.json  Token_metadata.json  arithemtic.json  arithemtic_metadata.json  insurance.json  insurance_metadata.json  largest.json  largest_metadata.json  pali.json  pali_metadata.json  simpleStorage.json  simpleStorage_metadata.json  toggle.json  toggle_metadata.json
cryptography basics/public_key/: digital_signature.py
cryptography basics/tamper_check/: untampered_sender.py
cryptography/tamper_check/: message  untampered_reciever.py
solidity/contracts/: Arithmetic.sol  Hello.sol  booleanToggle.sol  overflow.sol  reverseInteger.sol  simpleStorage.sol  whoseNumber.sol
(+9 files in other folders)
