[project]
name = "blockchain-using-python"
version = "0.1.0"
description = "This is a follow-along code practice for the book by the same name by Daniel van Flymen"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
