[project]
name = "tharunite"
version = "0.1.0"
description = "Blockchain implementation using python for educational purposes"
authors = [
    {name = "UTK",email = "utharunkumar0@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
